(lang dune 3.16)
(name lenstra)
(generate_opam_files true)
(source (github dpv927/lenstra))
(authors "dpv927")
(maintainers "dpv927")
(license LICENSE)
(documentation https://url/to/documentation)

(package
 (name lenstra)
 (synopsis "Lenstra Elliptic Curve Factorization")
 (description "Lenstra Elliptic Curve Factorization")
 (depends ocaml dune)
 (tags (topics "to describe" your project)))
